syntax = "proto3";

option csharp_namespace = "Web.API";

service User{
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
	rpc GetUser (GetUserRequest) returns (GetUserReply);
	rpc CreateOrGetUser(CreateUserRequest) returns(CreateUserReply);
}

message CreateUserRequest{
	string name = 1;
	
}

message CreateUserReply{
	string message = 1;
}

message GetUserRequest{
	string id = 1;
}

message GetUserReply{
	string id = 1;
	string name = 2;
	string balance = 3;
}